--- a/BlogV1/wwwroot/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/BlogV1/wwwroot/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -649,7 +649,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <img src="../images/header_bg.jpg" />
                         </div>
 
                         <div class="col-lg-6 mb-4">
